creusot/tests/should_fail/prusti/invalid_state/old_logic_spec.stderr
error[creusot]: 'pre can only be used in specifications of program functions
 --> old_logic_spec.rs:5:21
  |
5 | #[ensures(result == old(x))]
  |                     ^^^^^^

error: aborting due to previous error

